# Hotel-Demand-Analysis

./: pyproject.toml  temp.html
analysiss/_future_work/: todo.md
analysiss/classification/: classification_b_m.ipynb
analysiss/clustering/: clustering.ipynb
analysiss/regression/: regression.ipynb
data/: attractions.csv  hotels.csv
preprocessing/: hotels_preprocessed.csv  preprocessing_final.ipynb  preprocessing_script.ipynb
preprocessing/output_results/: hotels_preprocessed_Amsterdam.csv  hotels_preprocessed_Antwerp.csv  hotels_preprocessed_Dortmund.csv
scrape_scripts/: create_attractions_csv.py  create_hotels_csv.py
