[tool.poetry]
name = "uni-proj"
version = "0.1.0"
description = ""
authors = ["Nikola Gilev <nikola.gilev@codechem.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
requests = "^2.31.0"
selenium = "^4.16.0"
bs4 = "^0.0.1"
fake-useragent = "^1.4.0"
pandas = "^2.1.4"
requests-html = "^0.10.0"
scikit-learn = "^1.3.2"
matplotlib = "^3.8.2"
seaborn = "^0.13.1"
plotly = "^5.18.0"
nbformat = "^5.9.2"
numpy = "^1.26.3"
minisom = "^2.3.1"
papermill = "^2.5.0"
xgboost = "^2.0.3"

[tool.poetry.group.dev.dependencies]
requests = "^2.31.0"
ipykernel = "^6.28.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
